--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "modal",
+  "name": "animais-fantasticos",
   "version": "1.0.0",
-  "description": "",
   "main": "index.html",
   "scripts": {
     "build": "webpack --mode production ",
     "dev": "webpack --mode development --watch "
   },
-  "author": "",
+  "author": "Victor Jansen",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.13.16",
